Use built-in Base64 implementation instead of 3rd party one
git-svn-id: svn+ssh://svn.code.sf.net/p/omegat/svn/trunk@8260 b0d8beef-cb45-0410-a8e4-c0d495c3b779